[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
exclude = ["alembic", "tests"]

[tool.ruff.lint]
select = ["D", "E", "F", "W", "S", "PL", "N"]
fixable = ["ALL"]
ignore = ["D100", "D101", "D104", "D107", "D203", "D212", "E501", "S608"]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.isort]
profile = "black"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
