[metadata]
name = azure_gateway
version = 2024.3.0
description = Package for easier access to the Azure Gateway API
readme = file: README.md
requires-python = >=3.10
license = Custom
license_files = file: LICENSE.txt
url = https://github.com/ArtifactSwiss/azure-gateway-pkg
author = Bastian Eichenberger
author_email = bastian.eichenberger@artifact.swiss
classifiers =
	Development Status :: 4 - Beta
	Intended Audience :: Developers
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
	Programming Language :: Python :: 3.12
	Programming Language :: Python :: 3 :: Only

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
	requests